Add 2.5.1 release notes

--- a/_includes/manuals/2.5/1.2_release_notes.md
+++ b/_includes/manuals/2.5/1.2_release_notes.md
@@ -49,6 +49,62 @@ This is the list of deprecated methods and their successor:
 
 Puppet 5 is officially End of Life. Foreman {{page.version}} still supports Puppet 5, but in a future release this will be removed.
 
+### Release notes for 2.5.1
+#### Foreman - Compute resources - VMware
+* Can not modify associated hosts if connection to vCenter is down ([#31307](https://projects.theforeman.org/issues/31307))
+
+#### Foreman - DB migrations
+* Migrations fail with 'could not create unique index "index_lookup_values_on_lookup_key_id_and_match"' error ([#32673](https://projects.theforeman.org/issues/32673))
+
+#### Foreman - Database
+* PG::AmbiguousColumn when listing domains ([#32641](https://projects.theforeman.org/issues/32641))
+
+#### Foreman - Host creation
+* Confirming interface modal by enter causes whole Host form to get confirmed ([#32397](https://projects.theforeman.org/issues/32397))
+
+#### Foreman - Host registration
+* Normally Inherited fields are not inherited upon host registreation ([#32457](https://projects.theforeman.org/issues/32457))
+* Add support for AlmaLinux 8 as a client ([#31787](https://projects.theforeman.org/issues/31787))
+
+#### Foreman - Inventory
+* Host api request fails when thin=true and per_page=all ([#32776](https://projects.theforeman.org/issues/32776))
+* API - ISE when using invalid status type ([#32536](https://projects.theforeman.org/issues/32536))
+* Add Rocky Linux support to Foreman ([#32516](https://projects.theforeman.org/issues/32516))
+
+#### Foreman - Search
+* Editing an existing bookmark should respect the current visibility ([#32662](https://projects.theforeman.org/issues/32662))
+* Allow searching hosts by attributes of the reported data facet ([#32140](https://projects.theforeman.org/issues/32140))
+
+#### Foreman - Settings
+* CVE-2021-3584: Remote code execution through Sendmail configuration ([#32753](https://projects.theforeman.org/issues/32753))
+
+#### Foreman - Templates
+* Avoid echo statements without quotes in Grub ([#32681](https://projects.theforeman.org/issues/32681))
+* kickstart_kernel_options doesn't handle properly tagged vlan over bond device ([#32497](https://projects.theforeman.org/issues/32497))
+
+#### Foreman - Unattended installations
+* puppet.conf template do not render after introduction of puppet host params ([#32772](https://projects.theforeman.org/issues/32772))
+
+#### Foreman - Users, Roles and Permissions
+* Non-admin user can not revoke user access token, attempt ends with 404  ([#32826](https://projects.theforeman.org/issues/32826))
+* 50/50 chance to create role filter with non-admin user and enough permissions ([#30394](https://projects.theforeman.org/issues/30394))
+
+#### Foreman - Web Interface
+* Update all freenode references to point to https://theforeman.org/support.html#IRClivechat or libera.chat ([#32809](https://projects.theforeman.org/issues/32809))
+
+#### Installer - Foreman modules
+* Additional RPMs in /pub directory break latest symlink ([#32700](https://projects.theforeman.org/issues/32700))
+* remove md5 from allowed content types for pulpcore ([#32553](https://projects.theforeman.org/issues/32553))
+
+#### Packaging
+* foreman 2.5 /etc/cron.d/foreman broken ([#32859](https://projects.theforeman.org/issues/32859))
+
+#### Packaging - RPMs
+* katello-change-hostname should handle --no-enable-puppet properly ([#32725](https://projects.theforeman.org/issues/32725))
+* katello-change-hostname assumes answers file location ([#32743](https://projects.theforeman.org/issues/32743))
+
+*A full list of changes in 2.5.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1409)*
+
 ### Release notes for 2.5.0
 #### Foreman - API
 * Result key for saved object should not be camel case ([#32177](https://projects.theforeman.org/issues/32177))
