--- a/_includes/manuals/1.15/7.4_getting_help.md
+++ b/_includes/manuals/1.15/7.4_getting_help.md
@@ -1,7 +1,7 @@
 Please check the [Troubleshooting wiki page](http://projects.theforeman.org/projects/1/wiki/Troubleshooting) for solutions to the most common problems.  Otherwise, there are two primary methods of getting support for the Foreman: IRC and the forum.
 
 ### IRC
-We work on the [irc.freenode.net](http://webchat.freenode.net/) servers. You can get general support in #theforeman, while development chat takes place in #theforeman-dev.
+We work on the [libera.chat](https://libera.chat/) servers. You can get general support in #theforeman, while development chat takes place in #theforeman-dev.
 
 ### Forum
 We have a Discourse forum, and much like IRC, we have a general users (support, Q/A, etc) support board and a development board:
