update docs to match installer and use auth_gssapi

--- a/_includes/manuals/nightly/5.7.3_kerberos.md
+++ b/_includes/manuals/nightly/5.7.3_kerberos.md
@@ -23,24 +23,22 @@ chown apache /etc/http.keytab
 chmod 600 /etc/http.keytab
 {% endhighlight %}
 
-Install mod_auth_kerb and mod_authnz_pam:
+Install mod_auth_gssapi and mod_authnz_pam:
 {% highlight bash %}
-yum install -y mod_auth_kerb mod_authnz_pam
+yum install -y mod_auth_gssapi mod_authnz_pam
 {% endhighlight %}
 
 Configure the module to be used by Apache (we assume the realm is *EXAMPLE.COM*, adjust to match your setup):
 {% highlight text %}
 # add to /etc/httpd/conf.d/auth_kerb.conf
-LoadModule auth_kerb_module modules/mod_auth_kerb.so
+LoadModule auth_gssapi_module modules/mod_auth_gssapi.so
 LoadModule authnz_pam_module modules/mod_authnz_pam.so
 <Location /users/extlogin>
-  AuthType Kerberos
-  AuthName "Kerberos Login"
-  KrbMethodNegotiate On
-  KrbMethodK5Passwd Off
-  KrbAuthRealms EXAMPLE.COM
-  Krb5KeyTab /etc/http.keytab
-  KrbLocalUserMapping On
+  AuthType GSSAPI
+  AuthName "GSSAPI Single Sign On Login"
+  GssapiCredStore keytab:/etc/http.keytab
+  GssapiSSLonly On
+  GssapiLocalName On
   # require valid-user
   require pam-account foreman-prod
   ErrorDocument 401 '<html><meta http-equiv="refresh" content="0; URL=/users/login"><body>Kerberos authentication did not pass.</body></html>'
