add Kerberos auth on EL8 feature

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -4,6 +4,12 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Kerberos authentication using mod_auth_gssapi
+
+The installer will now deploy `mod_auth_gssapi` instead of `mod_auth_kerb` if called with `--foreman-ipa-authentication=true`.
+Existing installations will be upgraded to use `mod_auth_gssapi` too.
+This allows deploying Kerberos authentication on CentOS 8, which lacks `mod_auth_kerb`.
+
 ### Upgrade warnings
 
 * The `view_bookmarks` permission has been removed. All users are able to see their own bookmarks and any public bookmark defined by others.
