add a line about debian/ubuntu kerberos

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -9,6 +9,7 @@ This section will be updated prior to the next release.
 The installer will now deploy `mod_auth_gssapi` instead of `mod_auth_kerb` if called with `--foreman-ipa-authentication=true`.
 Existing installations will be upgraded to use `mod_auth_gssapi` too.
 This allows deploying Kerberos authentication on CentOS 8, which lacks `mod_auth_kerb`.
+Debian and Ubuntu also provide `mod_auth_gssapi` and the installer can now deploy Kerberos authentication there too.
 
 ### Upgrade warnings
 
