--- a/_includes/manuals/2.5/1.2_release_notes.md
+++ b/_includes/manuals/2.5/1.2_release_notes.md
@@ -49,6 +49,38 @@ This is the list of deprecated methods and their successor:
 
 Puppet 5 is officially End of Life. Foreman {{page.version}} still supports Puppet 5, but in a future release this will be removed.
 
+### Release notes for 2.5.2
+#### Foreman
+* wrong error message when failing to create an external user ([#32942](https://projects.theforeman.org/issues/32942))
+
+#### Foreman - Audit Log
+* Documentation button on Audits page opens in same tab ([#32821](https://projects.theforeman.org/issues/32821))
+
+#### Foreman - Compute resources - VMware
+* MAC Adress gets removed when using VM Import ([#32842](https://projects.theforeman.org/issues/32842))
+
+#### Foreman - Host registration
+* Registration migration - Unassign OS from registration templates ([#32959](https://projects.theforeman.org/issues/32959))
+
+#### Foreman - TFTP
+* DHCP next-server option is "false" when tftp-servername was not provided ([#32921](https://projects.theforeman.org/issues/32921))
+
+#### Foreman - Templates
+*  Latest preseed_networking_setup template snippet does not work Ubuntu 18.04+ with multiple nics  ([#32981](https://projects.theforeman.org/issues/32981))
+* Allow using host comment in the safe mode ([#32858](https://projects.theforeman.org/issues/32858))
+* Add the ability to add custom steps to the Default Finish template at early and late stages ([#32715](https://projects.theforeman.org/issues/32715))
+* Ansible callback doesn't run because the file is not executable ([#32490](https://projects.theforeman.org/issues/32490))
+
+#### Installer
+* need a way for a scenario to override installer defaults ([#32916](https://projects.theforeman.org/issues/32916))
+* tuning runs without valid tuning level ([#32532](https://projects.theforeman.org/issues/32532))
+
+#### Installer - Foreman modules
+* Provide ability to configure content caching in Pulpcore ([#32910](https://projects.theforeman.org/issues/32910))
+* puppet-pulpcore should support enabling and disabling the new tasking system ([#32891](https://projects.theforeman.org/issues/32891))
+
+*A full list of changes in 2.5.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1457)*
+
 ### Release notes for 2.5.1
 #### Foreman - Compute resources - VMware
 * Can not modify associated hosts if connection to vCenter is down ([#31307](https://projects.theforeman.org/issues/31307))
