document enable-epel defaults to false
https://github.com/theforeman/foreman/pull/8295

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -14,6 +14,7 @@ Debian and Ubuntu also provide `mod_auth_gssapi` and the installer can now deplo
 ### Upgrade warnings
 
 * The `view_bookmarks` permission has been removed. All users are able to see their own bookmarks and any public bookmark defined by others.
+* The `enable-epel` parameter now defaults to `false`. If you still want to enable EPEL at provisioning time, you will need to explicitly set the parameter to `true`.
 
 ### Deprecations
 
