add upgrade note for host_param_true/false macros

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -15,6 +15,7 @@ Debian and Ubuntu also provide `mod_auth_gssapi` and the installer can now deplo
 
 * The `view_bookmarks` permission has been removed. All users are able to see their own bookmarks and any public bookmark defined by others.
 * The `enable-epel` parameter now defaults to `false`. If you still want to enable EPEL at provisioning time, you will need to explicitly set the parameter to `true`.
+* The `host_param_true?` and `host_param_false?` macros changed the meaning of the `default_value` parameter. The value is now used for the comparison if the parameter is not set on the host, instead of returing the value directly. Please update your templates accordingly.
 
 ### Deprecations
 
