document new debian signing key for 3.0

--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -16,6 +16,7 @@ Debian and Ubuntu also provide `mod_auth_gssapi` and the installer can now deplo
 * The `view_bookmarks` permission has been removed. All users are able to see their own bookmarks and any public bookmark defined by others.
 * The `enable-epel` parameter now defaults to `false`. If you still want to enable EPEL at provisioning time, you will need to explicitly set the parameter to `true`.
 * The `host_param_true?` and `host_param_false?` macros changed the meaning of the `default_value` parameter. The value is now used for the comparison if the parameter is not set on the host, instead of returing the value directly. Please update your templates accordingly.
+* The Debian packages are signed with a new key ([5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A](/static/keys/5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A.pub)). Please import it to verify the packages.
 
 ### Deprecations
 
