Add headline feature about moved parsers into core

--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -11,6 +11,10 @@ Existing installations will be upgraded to use `mod_auth_gssapi` too.
 This allows deploying Kerberos authentication on CentOS 8, which lacks `mod_auth_kerb`.
 Debian and Ubuntu also provide `mod_auth_gssapi` and the installer can now deploy Kerberos authentication there too.
 
+#### Fact parsers are included in core
+
+Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the Foreman core. This is the first step in refactoring fact handling in Foreman to be simpler, faster and easily extendable. Thanks to that it's now possible to upload facts from these tools even if the respective plugin is not installed. 
+
 ### Upgrade warnings
 
 * The `view_bookmarks` permission has been removed. All users are able to see their own bookmarks and any public bookmark defined by others.
