Add Puppet extraction as Headline Feature

--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -4,6 +4,13 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Puppet ENC functionality extracted to foreman_puppet plugin
+
+Foreman without the plugin no longer includes Puppet environments, config groups, Puppet classes and smart class parameters.
+It is still possible to assign Puppet environment to a host using the `puppet_environment` parameter. This is also the case for setting Puppet server and Puppet CA server for provisioning, which can be defined using the `puppet_server` and `puppet_ca_server`. A rake task will be provided to allow automatically migrating these values to parameters for users who do not wish to continue using the plugin.
+By default, this plugin is still installed in 3.0 both on fresh installs and upgrades, but will default to off in future releases.
+More information can be found on our Discourse in thread [Puppet ENC plugin development](https://community.theforeman.org/t/puppet-enc-plugin-development/20687) and [Puppet in 3.0 release](https://community.theforeman.org/t/puppet-in-3-0-release/24429)
+
 #### Kerberos authentication using mod_auth_gssapi
 
 The installer will now deploy `mod_auth_gssapi` instead of `mod_auth_kerb` if called with `--foreman-ipa-authentication=true`.
