add link to blog to the release notes

--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -28,6 +28,7 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 * The `enable-epel` parameter now defaults to `false`. If you still want to enable EPEL at provisioning time, you will need to explicitly set the parameter to `true`.
 * The `host_param_true?` and `host_param_false?` macros changed the meaning of the `default_value` parameter. The value is now used for the comparison if the parameter is not set on the host, instead of returing the value directly. Please update your templates accordingly.
 * The Debian packages are signed with a new key ([5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A](/static/keys/5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A.pub)). Please import it to verify the packages.
+* Foreman 2.5 for Debian/Ubuntu had briefly wrong versioned Ansible and Remote Execution plugins published, please read our [blog post how to properly upgrade these](/2021/08/please-manually-upgrade-ansible-and-remote-execution-plugins-on-25.html).
 
 ### Deprecations
 
