--- a/_includes/manuals/2.5/1.2_release_notes.md
+++ b/_includes/manuals/2.5/1.2_release_notes.md
@@ -49,6 +49,41 @@ This is the list of deprecated methods and their successor:
 
 Puppet 5 is officially End of Life. Foreman {{page.version}} still supports Puppet 5, but in a future release this will be removed.
 
+### Release notes for 2.5.3
+#### Foreman - Host registration
+* Hammer --setup-insights false | no|0 is not working \- [#33121](https://projects.theforeman.org/issues/33121)
+* Content host registration using command generated from global registration form fails if activation key name contains ' (single quote) in it. \- [#33033](https://projects.theforeman.org/issues/33033)
+* Refresh subscription data \- [#33004](https://projects.theforeman.org/issues/33004)
+* Update packages \- [#32918](https://projects.theforeman.org/issues/32918)
+* Default packages are overridden by host package even if not specified registration form \- [#32780](https://projects.theforeman.org/issues/32780)
+
+#### Foreman - Inventory
+* Make name_column helper defensive with displaying statuses \- [#33049](https://projects.theforeman.org/issues/33049)
+
+#### Foreman - Puppet integration
+* Puppet environment help, shows at the top of the page Lifecycle environments instead of Environments \- [#33179](https://projects.theforeman.org/issues/33179)
+* double Puppet deprecation notice on host creation page \- [#32493](https://projects.theforeman.org/issues/32493)
+
+#### Foreman - Reporting
+* Reports malformed format string \- [#32850](https://projects.theforeman.org/issues/32850)
+
+#### Foreman - Settings
+* Load only core setting values the first time we load them \- [#32963](https://projects.theforeman.org/issues/32963)
+* Setting registry doesn't reload properly on autoreload \- [#32489](https://projects.theforeman.org/issues/32489)
+
+#### Foreman - Templates
+* AIX PXE attributes loading does not work \- [#33090](https://projects.theforeman.org/issues/33090)
+* Install salt-minion is done twice \- [#33042](https://projects.theforeman.org/issues/33042)
+* Allow templates to hide preview button \- [#32928](https://projects.theforeman.org/issues/32928)
+
+#### Installer - Foreman modules
+* Roles imported from a collection installed to /etc/ansible/collections are not found when run on hosts \- [#33162](https://projects.theforeman.org/issues/33162)
+
+#### Packaging - RPMs
+* Candlepin package incorrectly signed for FIPS environment \- [#31895](https://projects.theforeman.org/issues/31895)
+
+*A full list of changes in 2.5.3 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1469)*
+
 ### Release notes for 2.5.2
 #### Foreman
 * wrong error message when failing to create an external user ([#32942](https://projects.theforeman.org/issues/32942))
