Installer options for Foreman 3.0.0-RC2

--- a/_includes/manuals/3.0/3.2.2_installer_options.md
+++ b/_includes/manuals/3.0/3.2.2_installer_options.md
@@ -62,6 +62,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_cli_openscap' puppet module</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-cli-puppet</td>
+        <td>Enable 'foreman_cli_puppet' puppet module</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-cli-remote-execution</td>
         <td>Enable 'foreman_cli_remote_execution' puppet module</td>
       </tr>
@@ -74,12 +78,20 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_cli_templates' puppet module</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-cli-webhooks</td>
+        <td>Enable 'foreman_cli_webhooks' puppet module</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy</td>
         <td>Enable 'foreman_proxy' puppet module</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-puppet</td>
         <td>Enable 'puppet' puppet module</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-acd</td>
+        <td>Enable 'foreman_plugin_acd' puppet module (<a href="https://github.com/theforeman/foreman_acd">foreman_acd</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-ansible</td>
@@ -154,6 +166,10 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_ovirt_provision' puppet module (<a href="https://github.com/theforeman/ovirt_provision_plugin">ovirt_provision_plugin</a>)</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-puppet</td>
+        <td>Enable 'foreman_plugin_puppet' puppet module (<a href="https://github.com/theforeman/foreman_puppet">foreman_puppet</a>)</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-puppetdb</td>
         <td>Enable 'foreman_plugin_puppetdb' puppet module (<a href="https://github.com/theforeman/puppetdb_foreman">puppetdb_foreman</a>)</td>
       </tr>
@@ -216,6 +232,10 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-compute-vmware</td>
         <td>Enable 'foreman_compute_vmware' puppet module</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-acd</td>
+        <td>Enable 'foreman_proxy_plugin_acd' puppet module (<a href="https://github.com/theforeman/smart_proxy_acd">smart_proxy_acd</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-ansible</td>
@@ -300,10 +320,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Configure Apache as a reverse proxy for the Foreman server</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-app-root</td>
-        <td>Name of foreman root directory</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-client-ssl-ca</td>
         <td>Defines the SSL CA used to communicate with Foreman Proxies</td>
       </tr>
@@ -384,6 +400,18 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Email delivery method</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-email-reply-address</td>
+        <td>Email reply address for emails that Foreman is sending</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-email-sendmail-arguments</td>
+        <td>The arguments to pass to the sendmail binary. Unused when SMTP delivery is used.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-email-sendmail-location</td>
+        <td>The location of the binary to call when sendmail is the delivery method. Unused when SMTP delivery is used.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-email-smtp-address</td>
         <td>SMTP server hostname, when delivery method is SMTP</td>
       </tr>
@@ -408,24 +436,24 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Username for SMTP server auth, if authentication is enabled</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-email-subject-prefix</td>
+        <td>Prefix to add to all outgoing email</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-foreman-service-puma-threads-max</td>
         <td>Maximum number of threads for every Puma worker</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-foreman-service-puma-threads-min</td>
-        <td>Minimum number of threads for every Puma worker</td>
+        <td>Minimum number of threads for every Puma worker. If no value is specified, this defaults to setting min threads to maximum threads. Setting min threads equal to max threads has been shown to alleviate memory leaks and in some cases produce better performance.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-foreman-service-puma-workers</td>
-        <td>Number of workers for Puma</td>
+        <td>Number of workers for Puma. If not set, the value is dynamically calculated based on available number of CPUs and memory.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-foreman-url</td>
         <td>URL on which foreman is going to run</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-group</td>
-        <td>Primary group for the Foreman user</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-hsts-enabled</td>
@@ -433,7 +461,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-http-keytab</td>
-        <td>Path to keytab to be used for Kerberos authentication on the WebUI</td>
+        <td>Path to keytab to be used for Kerberos authentication on the WebUI. If left empty, it will be automatically determined.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-initial-admin-email</td>
@@ -508,10 +536,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Logging type of the Foreman application</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-manage-user</td>
-        <td>Controls whether foreman module will manage the user on the system.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-oauth-active</td>
         <td>Enable OAuth authentication for REST API</td>
       </tr>
@@ -532,20 +556,12 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>PAM service used for host-based access control in IPA</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-prefix</td>
-        <td>String which is prepended to the plugin package names</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-plugin-version</td>
         <td>Foreman plugins package version, it's passed to ensure parameter of package resource can be set to 'installed', 'latest', 'present' only</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-rails-cache-store</td>
         <td>Set rails cache store</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-rails-env</td>
-        <td>Rails environment of foreman</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-server-port</td>
@@ -636,20 +652,8 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>URL hosts will retrieve templates from during build (normally http as many installers don't support https)</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-user</td>
-        <td>User under which foreman will run</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-user-groups</td>
-        <td>Additional groups for the Foreman user</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-version</td>
         <td>Foreman package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-vhost-priority</td>
-        <td>Defines Apache vhost priority for the Foreman vhost conf file.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-websockets-encrypt</td>
@@ -666,10 +670,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-cli-foreman-url</td>
         <td>URL on which Foreman runs</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-cli-hammer-plugin-prefix</td>
-        <td>Hammer plugin package prefix based normally on platform</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-cli-manage-root-config</td>
@@ -956,10 +956,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Remove DNS entries from FreeIPA when deleting hosts from realm</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-proxy-gpgcheck</td>
-        <td>Turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-groups</td>
         <td>Array of additional groups for the foreman proxy user</td>
       </tr>
@@ -1142,10 +1138,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-registration-listen-on</td>
         <td>Registration proxy to listen on https, http, or both</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-proxy-repo</td>
-        <td>Which repository to use. Can be a specific version or nightly. Will not configure anything when undefined.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-ssl</td>
@@ -1865,7 +1857,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-use-legacy-auth-conf</td>
-        <td>Should the puppetserver use the legacy puppet auth.conf? Defaults to false (the puppetserver will use its own conf.d/auth.conf)</td>
+        <td>Should the puppetserver use the legacy puppet auth.conf? Defaults to false (the puppetserver will use its own conf.d/auth.conf) Note that Puppetserver 7 has dropped this option.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-user</td>
@@ -2034,6 +2026,18 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-compute-vmware-version</td>
         <td>Package version to install, defaults to installed</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-acd-enabled</td>
+        <td>enables/disables the acd plugin</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-acd-listen-on</td>
+        <td>proxy feature listens on http, https, or both</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-acd-version</td>
+        <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-ansible-ansible-dir</td>
