EL7 & Ubuntu 18.04 deprecations for 3.0 & nightly
This follows the [RFC].

[RFC]: https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008

--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -32,6 +32,22 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 
 ### Deprecations
 
+#### Running Foreman on Ubuntu 18.04
+
+Foreman 2.5 introduced support to run on Ubuntu 20.04. Foreman 3.0 deprecates support for running on Ubuntu 18.04 and Foreman 3.1 will drop it.
+Users are encouraged to upgrade to Ubuntu 20.04 either on Foreman 2.5 or 3.0 but Ubuntu 18.04 will remain supported until Foreman 2.5 and 3.0 are end of life.
+
+Note that this is only support to run Foreman and Foreman Proxy themselves on Ubuntu 18.04. Managing Ubuntu 18.04 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+
+#### Running Foreman on EL7
+
+Foreman 2.1 introduced EL8 support and Katello 4.0 (on Foreman 2.4) followed.
+While it's currently undecided when EL7 support will be dropped exactly, this is an early notice given the considerable number of EL7 deployments.
+For fresh installations, EL8 should considered the preferred target.
+Existing installations should start thinking about a migration plan.
+
+Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+
 ### Release notes for 3.0.0
 #### Foreman
 * provide a list of JavaScript dependencies that can be ignored during package building \- [#33318](https://projects.theforeman.org/issues/33318)
