--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -35,7 +35,6 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 ### Release notes for 3.0.0
 #### Foreman
 * provide a list of JavaScript dependencies that can be ignored during package building \- [#33318](https://projects.theforeman.org/issues/33318)
-* Use Patternfly charts in Runtime \- [#23665](https://projects.theforeman.org/issues/23665)
 
 #### Foreman - API
 * Add GraphQL type and queries for permissions \- [#33123](https://projects.theforeman.org/issues/33123)
@@ -51,6 +50,9 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 
 #### Foreman - Audit Log
 * Documentation button on Audits page opens in same tab \- [#32821](https://projects.theforeman.org/issues/32821)
+
+#### Foreman - BMC
+* undefined method \`bmc' for nil:NilClass \- [#33229](https://projects.theforeman.org/issues/33229)
 
 #### Foreman - Compute resources
 * Drop Spice XPI support \- [#33155](https://projects.theforeman.org/issues/33155)
@@ -130,6 +132,7 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 
 #### Foreman - JavaScript stack
 * don't run npm-fix-foreman-stories.sh on every npm install \- [#33319](https://projects.theforeman.org/issues/33319)
+* Toast message is hidden \- [#33316](https://projects.theforeman.org/issues/33316)
 * Add useCallback to RegistrationCommandsPage \- [#33161](https://projects.theforeman.org/issues/33161)
 * Slot registry isn't singleton  \- [#33153](https://projects.theforeman.org/issues/33153)
 * Refactor FactChart to use slice pattern \- [#33003](https://projects.theforeman.org/issues/33003)
@@ -144,6 +147,7 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 * Implement timseries area chart in React \- [#31596](https://projects.theforeman.org/issues/31596)
 * deprecate flot_chart (timeseries area chart) \- [#31595](https://projects.theforeman.org/issues/31595)
 * CSS files need optimizations (removing duplicates, minifying)  \- [#31277](https://projects.theforeman.org/issues/31277)
+* Use Patternfly charts in Runtime \- [#23665](https://projects.theforeman.org/issues/23665)
 
 #### Foreman - Logging
 * Allow relative values in filename log setting \- [#32636](https://projects.theforeman.org/issues/32636)
@@ -158,6 +162,9 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 
 #### Foreman - Parameters
 * add merge-option for variables of type "yaml" (Ansible/Salt/Puppet) \- [#32741](https://projects.theforeman.org/issues/32741)
+
+#### Foreman - Proxy gateway
+* Drop unwanted URI parsing from NetHttpExtension \- [#32837](https://projects.theforeman.org/issues/32837)
 
 #### Foreman - Puppet integration
 * Add task to set host parameters from Puppet data \- [#33180](https://projects.theforeman.org/issues/33180)
@@ -244,6 +251,7 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 * User can view bookmarks without assigning view_bookmarks permission in a role \- [#30387](https://projects.theforeman.org/issues/30387)
 
 #### Foreman - Web Interface
+* host details overview cards grid isn't aligned nor responsive  \- [#33311](https://projects.theforeman.org/issues/33311)
 * Host details page - react warnings should be cleaned  \- [#33110](https://projects.theforeman.org/issues/33110)
 * Menu::Item doesn't use the \`:if\` option \- [#32883](https://projects.theforeman.org/issues/32883)
 * The new host details page should support secondary tabs \- [#32828](https://projects.theforeman.org/issues/32828)
@@ -283,6 +291,7 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 * Use Foreman client certificates for communication with Artemis broker in Candlepin \- [#32382](https://projects.theforeman.org/issues/32382)
 
 #### Installer - Foreman modules
+* Change Puma defaults to match recommendations from Puma documentation \- [#33277](https://projects.theforeman.org/issues/33277)
 * Roles imported from a collection installed to /etc/ansible/collections are not found when run on hosts \- [#33162](https://projects.theforeman.org/issues/33162)
 * Move more variables from in puppet-foreman to globals.pp \- [#33106](https://projects.theforeman.org/issues/33106)
 * Don't store plugin_prefix (and hammer_plugin_prefix) in answers \- [#33089](https://projects.theforeman.org/issues/33089)
@@ -303,7 +312,7 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 * The installer does not update the katello-ca-consumer-latest symlink to the latest RPM once the bootstrap RPM's release is greater than 9. \- [#32529](https://projects.theforeman.org/issues/32529)
 * Add puppet type to manage an nssdb \- [#32511](https://projects.theforeman.org/issues/32511)
 * Use Foreman client certificates to communicate with Pulp \- [#32383](https://projects.theforeman.org/issues/32383)
-* foreman-installer - CentOS 8 : mod_auth_kerb has been replaced by mod_auth_gssapi \- [#32352](https://projects.theforeman.org/issues/32352)
+* mod_auth_kerb has been replaced by mod_auth_gssapi \- [#32352](https://projects.theforeman.org/issues/32352)
 * The system does not seem to be IPA-enrolled \- [#29649](https://projects.theforeman.org/issues/29649)
 
 #### Installer - foreman-installer script
