Remove BMC note and update contributors list

--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -29,7 +29,6 @@ Fact parsers for Ansible, Chef, Salt and Subscription Manager were moved to the 
 * The `host_param_true?` and `host_param_false?` macros changed the meaning of the `default_value` parameter. The value is now used for the comparison if the parameter is not set on the host, instead of returing the value directly. Please update your templates accordingly.
 * The Debian packages are signed with a new key ([5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A](/static/keys/5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A.pub)). Please import it to verify the packages.
 * Foreman 2.5 for Debian/Ubuntu had briefly wrong versioned Ansible and Remote Execution plugins published, please read our [blog post how to properly upgrade these](/2021/08/please-manually-upgrade-ansible-and-remote-execution-plugins-on-25.html).
-* BMC credentials access through ENC YAML output and templates is turned off by default for increased security. To turn it on, go to Administer - Settings and turn the "BMC credentials access" setting on.
 
 ### Deprecations
 
@@ -354,6 +353,6 @@ Note that this is only support to run Foreman and Foreman Proxy themselves on EL
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Cecile, Adam Ruzicka, Adi Abramovitch, Amir Fefer, Amit Upadhye, Andrew Lukoshko, Andrew Teixeira, Anna Vitova, Antoine Beaupré, Bernhard Suttner, Chris Roberts, Dominik Matoulek, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Garret Rumohr, Gordon Bleux, Ian Ballou, Jaskaran, Jeremy Lenz, John Mitsch, Jonathon Turel, Joniel Pasqualetto, Justin Sherrill, Kamil Szubrycht, Leos Stejskal, Lukáš Zapletal, Manuel Laug, Marek Hulán, Maria Agaphontzev, Markus Bucher, Melanie Corr, Nacho Barrientos, Nadja Heitmann, Ohad Levy, Oleh Fedorenko, Ondřej Ezr, Ondřej Pražák, Pablo N. Hess, Patrick Creech, Quirin Pamp, Rahul Bajaj, Romuald Conty, Ron Lavi, Shimon Shtein, Shira Maximov, Stejskal Leos, Tim Meusel, Tomer Brisker, William Clark, Yifat Makias, aabramov, adewar, dforste, lumarel, maccelf, rafaelguerra01, sufanek1
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
