--- a/_includes/manuals/2.5/1.2_release_notes.md
+++ b/_includes/manuals/2.5/1.2_release_notes.md
@@ -49,6 +49,21 @@ This is the list of deprecated methods and their successor:
 
 Puppet 5 is officially End of Life. Foreman {{page.version}} still supports Puppet 5, but in a future release this will be removed.
 
+### Release notes for 2.5.4
+#### Foreman - Development tools
+* container builds are broken \- [#33093](https://projects.theforeman.org/issues/33093)
+
+#### Foreman - Facts
+* Reduce allocations in FactImporter#update_facts \- [#33639](https://projects.theforeman.org/issues/33639)
+
+#### Foreman - Settings
+* Improve caching of SettingRegistry#load_values \- [#33640](https://projects.theforeman.org/issues/33640)
+
+#### Packaging
+* katello-agent on EL7 depends on python2-qpid from the qpid copr \- [#33497](https://projects.theforeman.org/issues/33497)
+
+*A full list of changes in 2.5.4 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1505)*
+
 ### Release notes for 2.5.3
 #### Foreman - Host registration
 * Hammer --setup-insights false | no|0 is not working \- [#33121](https://projects.theforeman.org/issues/33121)
