Add links to Salt documentation

--- a/_includes/manuals/nightly/4.9_managing_salt.md
+++ b/_includes/manuals/nightly/4.9_managing_salt.md
@@ -1,1 +1,1 @@
-Please refer to the [foreman_salt plugin documentation](/plugins/foreman_salt/).
+Documentation: [Using Salt for Configuration Management](https://docs.theforeman.org/nightly/Managing_Hosts/index-foreman-el.html#Using_Salt_for_Configuration_Management_managing-hosts)
