Update method for retrieving 'oauth_consumer_key' and 'oauth_consumer_secret'
https://projects.theforeman.org/issues/31472
https://community.theforeman.org/t/web-site-manual-2-3-0-out-of-date-instructions-on-obtaining-oauth-consumer-key-and-oauth-consumer-secret/21586

--- a/_includes/manuals/nightly/3.2.3_installation_scenarios.md
+++ b/_includes/manuals/nightly/3.2.3_installation_scenarios.md
@@ -72,7 +72,7 @@ foreman-installer \
   --foreman-proxy-oauth-consumer-secret=<secret here>
 {% endhighlight %}
 
-Fill in the OAuth consumer key and secret values from your Foreman instance, retrieve them from *Administer > Settings > Authentication*, and set the Foreman URLs appropriately.  These allow the smart proxy to register automatically with the Foreman instance, or disable with `--foreman-proxy-register-in-foreman=false`.
+Fill in the OAuth consumer key and secret values from your Foreman instance, retrieve them from your Foreman server, using: `sudo foreman-rake config | grep oauth_consumer`, and set the Foreman URLs appropriately.  These allow the smart proxy to register automatically with the Foreman instance, or disable with `--foreman-proxy-register-in-foreman=false`.
 
 #### PuppetDB integration
 
@@ -123,7 +123,7 @@ foreman-installer \
   --foreman-proxy-oauth-consumer-secret=<secret here>
 {% endhighlight %}
 
-Fill in the OAuth consumer key and secret values from your Foreman instance, retrieve them from *Administer > Settings > Authentication*, and set the Foreman URL appropriately.  These allow the smart proxy to register automatically with the Foreman instance, or disable with `--foreman-proxy-register-in-foreman=false`.
+Fill in the OAuth consumer key and secret values from your Foreman instance, retrieve them from your Foreman server, using: `sudo foreman-rake config | grep oauth_consumer`, and set the Foreman URLs appropriately.  These allow the smart proxy to register automatically with the Foreman instance, or disable with `--foreman-proxy-register-in-foreman=false`.
 
 Command line arguments for a smart proxy configured with just TFTP, BIND, setting DNS forwarders and overriding the default forward and reverse DNS zones:
 
