--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -48,6 +48,54 @@ Existing installations should start thinking about a migration plan.
 
 Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
+### Release notes for 3.0.1
+#### Foreman
+* app/models/concerns/orchestration/compute.rb:93 rescue ends up with error (ArgumentError): too few arguments \- [#32273](https://projects.theforeman.org/issues/32273)
+
+#### Foreman - Compute resources - VMware
+* Compute Resource cannot list the VMs if any VMs in the datacenter has config.instanceUuid set to '' \- [#33396](https://projects.theforeman.org/issues/33396)
+
+#### Foreman - Facts
+* Reduce allocations in FactImporter#update_facts \- [#33639](https://projects.theforeman.org/issues/33639)
+
+#### Foreman - Host registration
+* Use PF4 styling for warning in registration form \- [#33390](https://projects.theforeman.org/issues/33390)
+* Make the registration form more compact \- [#33389](https://projects.theforeman.org/issues/33389)
+
+#### Foreman - Reporting
+* Improve job invocation report template \- [#33223](https://projects.theforeman.org/issues/33223)
+
+#### Foreman - Settings
+* Improve caching of SettingRegistry#load_values \- [#33640](https://projects.theforeman.org/issues/33640)
+* Settings search is broken in hammer \- [#33347](https://projects.theforeman.org/issues/33347)
+
+#### Foreman - Templates
+* Provisioning of EL no longer writes to tty3 \- [#33426](https://projects.theforeman.org/issues/33426)
+
+#### Foreman - Tests
+* capybara 3.32.1 breaks ReportTemplateJSIntegrationTest \- [#29481](https://projects.theforeman.org/issues/29481)
+
+#### Foreman - Web Interface
+* Remove experimental host wizard page \- [#33621](https://projects.theforeman.org/issues/33621)
+* "All audits" link in host details page doesn't work \- [#33617](https://projects.theforeman.org/issues/33617)
+* Adding a banner for the experimental host details page \- [#33597](https://projects.theforeman.org/issues/33597)
+* There should be buttons to link in between the old host page and the new host detail page \- [#33507](https://projects.theforeman.org/issues/33507)
+* The new host detail page audits card gets misaligned \- [#33505](https://projects.theforeman.org/issues/33505)
+* The new host detail page hostname should never be split to two lines \- [#33504](https://projects.theforeman.org/issues/33504)
+* Mac Address label should have capital letters in the word MAC on the new host detail page \- [#33503](https://projects.theforeman.org/issues/33503)
+* The host owner name should be expanded to the full width as it typically takes more than a one line \- [#33502](https://projects.theforeman.org/issues/33502)
+* New host detail page MAC should remain on one line if there's a long host group next to it \- [#33501](https://projects.theforeman.org/issues/33501)
+* Experimental host page kebab menu buttons do nothing \- [#33491](https://projects.theforeman.org/issues/33491)
+* Edit button in experimental host page doesn't work \- [#33490](https://projects.theforeman.org/issues/33490)
+
+#### Installer - foreman-installer script
+* Foreman Puppet plugin is enabled in the migration even if Foreman is disabled \- [#33577](https://projects.theforeman.org/issues/33577)
+
+#### Packaging
+* katello-agent on EL7 depends on python2-qpid from the qpid copr \- [#33497](https://projects.theforeman.org/issues/33497)
+
+*A full list of changes in 3.0.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1489)*
+
 ### Release notes for 3.0.0
 #### Foreman
 * provide a list of JavaScript dependencies that can be ignored during package building \- [#33318](https://projects.theforeman.org/issues/33318)
